--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -174,3 +174,149 @@ input[type='checkbox'] {
 #quiz{
     display: none;
 }
+
+.quiz-cta-content{
+    width: 80%;
+}
+
+
+
+#quizMore{
+    display: none;
+}
+
+#quizIntro{
+    display: none;
+    height: 21em;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    // .quiz-cta{
+    //     position: absolute;
+    //     margin: auto;
+    //     bottom: 1.5em;
+    //     left: 0;
+    //     right: 0;
+    // }
+    
+}
+
+#quizCta{
+    height: 19em;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+// ---------------------------------------------------------------
+// Quiz section
+// ---------------------------------------------------------------
+
+.quiz-section{
+    text-align: center;
+    padding: 2em 0;
+    background-color: $aqua-bg;
+    @media #{$breakpoint-md}{
+        padding: 1em 0;
+    }
+    @media #{$breakpoint-xl}{
+        padding: 1em 0;
+    }
+}
+
+.quiz-cta-content{
+    width: 80%;
+    margin: 2em auto 2em auto;
+    @media #{$breakpoint-sm}{
+        margin: 3em auto 2em auto;
+    }
+    @media #{$breakpoint-md}{
+        width: 60%;
+        margin: 3em auto 0 auto;
+    }
+    @media #{$breakpoint-lg}{
+        width: 45%;
+        margin: 2em auto 0 auto;
+    }
+    @media #{$breakpoint-xl}{
+        width: 25%;
+        margin: 2em auto 0 auto;
+    }
+}
+
+.quiz-content-title{
+    font-weight: 400;
+    font-size: 1.1em;
+    @media #{$breakpoint-md}{
+        font-size: .8em;
+    }
+    @media #{$breakpoint-lg}{
+        font-size: .75em;
+    }
+    @media #{$breakpoint-xl}{
+        font-size: .6em;
+    }
+}
+
+.quiz-font{
+    font-size: 7em;
+    letter-spacing: .1em;
+    line-height: .6em;
+    @media #{$breakpoint-sm}{
+        font-size: 6em;
+    }
+    @media #{$breakpoint-md}{
+        font-size: 4em;
+    }
+    @media #{$breakpoint-lg}{
+        font-size: 4em;
+    }
+    @media #{$breakpoint-xl}{
+        font-size: 3.5em;
+    }
+}
+
+.quiz-content-main{
+    margin: 1.5em auto;
+}
+
+.quiz-cta-btn{
+    font-size: 1.2em;
+    padding: .6em 2em;
+    font-weight: 500;
+    @media #{$breakpoint-md}{
+        font-size: .9em;
+        padding: .4em 1.8em;
+    }
+    @media #{$breakpoint-lg}{
+        font-size: .9em;
+        padding: .4em 1.8em;
+    }
+    @media #{$breakpoint-xl}{
+        font-size: .7em;
+        padding: .5em 1.8em;
+    }
+}
+
+.quiz-cta{
+    margin: 2em auto;
+    @media #{$breakpoint-sm}{
+        margin: 2em auto;
+    }
+    @media #{$breakpoint-md}{
+        margin: 1em auto;
+    }
+    @media #{$breakpoint-lg}{
+        margin: 1em auto;
+    }
+    @media #{$breakpoint-xl}{
+        margin: 1em auto;
+    }
+}
