--- a/static/scss/base/_base.scss
+++ b/static/scss/base/_base.scss
@@ -31,3 +31,8 @@ body{
   font-family: $font-roboto;
   line-height: 1.5;
 }
+
+a:visited, a:hover, a:active, a:focus {
+  text-decoration: none !important;
+  outline: none !important;
+}
