--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1013,6 +1013,12 @@ a:visited, a:hover, a:active, a:focus {
   }
 }
 
+@media only screen and (min-width: 1600px) {
+  .contact-footer {
+    height: 18em;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .cf-content {
     display: -ms-grid;
@@ -1045,7 +1051,7 @@ a:visited, a:hover, a:active, a:focus {
 
 @media only screen and (min-width: 1600px) {
   .cf-content {
-    width: 42em;
+    width: 33em;
   }
 }
 
@@ -1081,6 +1087,12 @@ a:visited, a:hover, a:active, a:focus {
 @media only screen and (min-width: 1200px) {
   .cf-title {
     font-size: .7em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .cf-title {
+    font-size: .6em;
   }
 }
 
@@ -1321,6 +1333,12 @@ footer {
   }
 }
 
+@media only screen and (min-width: 1600px) {
+  .latest-post-ig {
+    font-size: 1.3em;
+  }
+}
+
 .ig-intro {
   position: relative;
   display: -ms-grid;
@@ -1347,7 +1365,7 @@ footer {
 
 @media only screen and (min-width: 1600px) {
   .ig-intro {
-    height: 12em;
+    height: 100%;
   }
 }
 
@@ -1383,6 +1401,12 @@ footer {
 @media only screen and (min-width: 1200px) {
   .ig-intro-content {
     height: 8em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .ig-intro-content {
+    height: 7em;
   }
 }
 
@@ -2185,9 +2209,28 @@ body {
   position: relative;
 }
 
-.carousel,
-.carousel-inner {
-  height: 100%;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .quiz-section {
+    height: 16em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-section {
+    height: 16em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-section {
+    height: 15em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .quiz-section {
+    height: 14em;
+  }
 }
 
 .quiz-carousel-item {
@@ -2247,6 +2290,30 @@ body {
       grid-template-rows: auto auto;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-item {
+    height: 16em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-item {
+    height: 12em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-item {
+    height: 11em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .quiz-item {
+    height: 10em;
+  }
+}
+
 .quiz-checkboxes {
   display: inline-block;
 }
@@ -2275,11 +2342,6 @@ input[type='checkbox'] {
   width: 50%;
 }
 
-.carousel-control {
-  position: relative;
-  width: 100%;
-}
-
 .options {
   text-align: center;
   position: absolute;
@@ -2297,6 +2359,24 @@ input[type='checkbox'] {
   padding: .6em 1.8em;
   margin: 1em;
   text-transform: uppercase;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .option-btn {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .option-btn {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .option-btn {
+    font-size: .6em;
+  }
 }
 
 .highlight-btn {
@@ -2334,6 +2414,34 @@ input[type='checkbox'] {
   right: 0;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  #question {
+    width: 70%;
+    margin: 1em auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  #question {
+    width: 70%;
+    margin: 1em auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  #question {
+    width: 55%;
+    margin: 1em auto;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  #question {
+    width: 40%;
+    margin: 1em auto;
+  }
+}
+
 #resultDiv {
   display: none;
 }
@@ -2361,8 +2469,68 @@ input[type='checkbox'] {
   right: 0;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  #quizIntro {
+    height: 17em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  #quizIntro {
+    height: 12em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  #quizIntro {
+    height: 12em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  #quizIntro {
+    height: 10em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  #quizIntro {
+    height: 8em;
+  }
+}
+
 .quiz-result {
   height: 17em !important;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-result {
+    height: 15em !important;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .quiz-result {
+    height: 10em !important;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-result {
+    height: 10em !important;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-result {
+    height: 9em !important;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-result {
+    height: 8em !important;
+  }
 }
 
 .fade-in {
@@ -2427,6 +2595,30 @@ input[type='checkbox'] {
   right: 0;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  #quizCta {
+    height: 13em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  #quizCta {
+    height: 13em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  #quizCta {
+    height: 12em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  #quizCta {
+    height: 11em;
+  }
+}
+
 .quiz-section {
   text-align: center;
   padding: 2em 0;
@@ -2472,7 +2664,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 1200px) {
   .quiz-cta-content {
-    width: 25%;
+    width: 40%;
     margin: 2em auto 0 auto;
   }
 }
@@ -2579,7 +2771,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .quiz-cta {
-    margin: 1em auto;
+    margin: 2em auto;
   }
 }
 
@@ -2843,6 +3035,7 @@ input[type='checkbox'] {
   .home-coaching {
     -ms-grid-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
         grid-template-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
+    margin: 1em 0 3em 0;
   }
 }
 
@@ -2915,8 +3108,8 @@ input[type='checkbox'] {
   .coaching-1-1,
   .coaching-free,
   .coaching-why {
-    -ms-grid-rows: 12em 13.5em;
-        grid-template-rows: 12em 13.5em;
+    -ms-grid-rows: 12em 12em;
+        grid-template-rows: 12em 12em;
   }
 }
 
@@ -3292,10 +3485,10 @@ input[type='checkbox'] {
   .quote {
     height: 7em;
     width: 24em;
-    padding: 1em 0;
+    padding: 1.5em 0;
   }
   .quote .quote-text {
-    font-size: .9em;
+    font-size: .8em;
     padding: 0 2em;
     margin: 0.6em .6em .6em .6em;
   }
@@ -3838,7 +4031,7 @@ input[type='checkbox'] {
 }
 
 .about-hero-content {
-  width: 22em;
+  width: 25em;
   margin: auto;
 }
 
@@ -3962,8 +4155,8 @@ input[type='checkbox'] {
 }
 
 .about-detail-title {
-  font-size: 1.95em;
-  width: 13.4em;
+  font-size: 1.65em;
+  width: 14.4em;
   font-weight: 400;
 }
 
@@ -5615,6 +5808,7 @@ input[type='checkbox'] {
   .home-coaching {
     -ms-grid-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
         grid-template-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
+    margin: 1em 0 3em 0;
   }
 }
 
@@ -5687,8 +5881,8 @@ input[type='checkbox'] {
   .coaching-1-1,
   .coaching-free,
   .coaching-why {
-    -ms-grid-rows: 12em 13.5em;
-        grid-template-rows: 12em 13.5em;
+    -ms-grid-rows: 12em 12em;
+        grid-template-rows: 12em 12em;
   }
 }
 
@@ -6064,10 +6258,10 @@ input[type='checkbox'] {
   .quote {
     height: 7em;
     width: 24em;
-    padding: 1em 0;
+    padding: 1.5em 0;
   }
   .quote .quote-text {
-    font-size: .9em;
+    font-size: .8em;
     padding: 0 2em;
     margin: 0.6em .6em .6em .6em;
   }
@@ -6888,6 +7082,7 @@ input[type='checkbox'] {
 @media only screen and (min-width: 1600px) {
   .intro-text {
     width: 34em;
+    margin-bottom: 0;
   }
 }
 
