--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -21,12 +21,20 @@ body { height: 100%; }
 .quiz-section{
     height: 27em;
     position: relative;
+    @media #{$breakpoint-md} {
+        height: 16em;
+    }
+    @media #{$breakpoint-lg} {
+        height: 16em;
+    }
+    @media #{$breakpoint-xl} {
+        height: 15em;
+    }
+    @media #{$breakpoint-xxl} {
+        height: 14em;
+    }
 }
 
-.carousel,
-.carousel-inner{
-    height: 100%;
-}
 
 .quiz-carousel-item{
     position: absolute;
@@ -82,7 +90,18 @@ body { height: 100%; }
     width: 90%;
     display: grid;
     grid-template-rows: auto auto;
-
+    @media #{$breakpoint-sm} {
+        height: 16em;
+    }
+    @media #{$breakpoint-lg} {
+        height: 12em;
+    }
+    @media #{$breakpoint-xl} {
+        height: 11em;
+    }
+    @media #{$breakpoint-xxl} {
+        height: 10em;
+    }
  
 }
 
@@ -111,11 +130,6 @@ input[type='checkbox'] {
     width: 50%;
 }
 
-.carousel-control{
-    position: relative;
-    width: 100%;
-}
-
 .options{
     text-align: center;
     position: absolute;
@@ -133,6 +147,17 @@ input[type='checkbox'] {
     padding: .6em 1.8em;
     margin: 1em;
     text-transform: uppercase;
+    @media #{$breakpoint-md} {
+        font-size: .8em;
+    }
+    @media #{$breakpoint-lg} {
+        font-size: .8em;
+    }
+    @media #{$breakpoint-xl} {
+        font-size: .6em;
+    }
+
+    
 }
 
 .highlight-btn{
@@ -167,6 +192,24 @@ input[type='checkbox'] {
     width: 100%;
     left: 0;
     right: 0;
+
+    @media #{$breakpoint-md} {
+        width: 70%;
+        margin: 1em auto;
+    }
+    @media #{$breakpoint-lg} {
+        width: 70%;
+        margin: 1em auto;
+    }
+    @media #{$breakpoint-xl} {
+        width: 55%;
+        margin: 1em auto;
+    }
+    @media #{$breakpoint-xxl} {
+        width: 40%;
+        margin: 1em auto;
+    }
+    
 }
 
 #resultDiv{
@@ -196,19 +239,41 @@ input[type='checkbox'] {
     bottom: 0;
     left: 0;
     right: 0;
-    
 
-    // .quiz-cta{
-    //     position: absolute;
-    //     margin: auto;
-    //     bottom: 1.5em;
-    //     left: 0;
-    //     right: 0;
-    // }
+    @media #{$breakpoint-sm} {
+        height: 17em;
+    }
+    @media #{$breakpoint-md} {
+        height: 12em;
+    }
+    @media #{$breakpoint-lg} {
+        height: 12em;
+    }
+    @media #{$breakpoint-xl} {
+        height: 10em;
+    }
+    @media #{$breakpoint-xxl} {
+        height: 8em;
+    }
 }
 
 .quiz-result{
     height: 17em!important;
+    @media #{$breakpoint-sm} {
+        height: 15em!important;
+    }
+    @media #{$breakpoint-md} {
+        height: 10em!important;
+    }
+    @media #{$breakpoint-lg} {
+        height: 10em!important;
+    }
+    @media #{$breakpoint-xl} {
+        height: 9em!important;
+    }
+    @media #{$breakpoint-xl} {
+        height: 8em!important;
+    }
 }
 
 // .quiz-intro{
@@ -259,6 +324,18 @@ input[type='checkbox'] {
     bottom: 0;
     left: 0;
     right: 0;
+    @media #{$breakpoint-md} {
+        height: 13em;
+    }
+    @media #{$breakpoint-lg} {
+        height: 13em;
+    }
+    @media #{$breakpoint-xl} {
+        height: 12em;
+    }
+    @media #{$breakpoint-xxl} {
+        height: 11em;
+    }
 }
 
 // ---------------------------------------------------------------
@@ -292,7 +369,7 @@ input[type='checkbox'] {
         margin: 2em auto 0 auto;
     }
     @media #{$breakpoint-xl}{
-        width: 25%;
+        width: 40%;
         margin: 2em auto 0 auto;
     }
 }
@@ -361,7 +438,7 @@ input[type='checkbox'] {
         margin: 1em auto;
     }
     @media #{$breakpoint-lg}{
-        margin: 1em auto;
+        margin: 2em auto;
     }
     @media #{$breakpoint-xl}{
         margin: 1em auto;
