--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6763,7 +6763,7 @@ input[type='checkbox'] {
     right: 0;
     top: 0;
     bottom: 0;
-    height: 13em;
+    height: 17em;
     margin: auto;
   }
 }
@@ -6957,6 +6957,14 @@ input[type='checkbox'] {
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .services-logo-title {
+    font-size: 3em;
+    line-height: .8;
+    margin: 0;
+  }
+}
+
 .services-intro {
   background-color: #f0f3f3;
   text-align: center;
@@ -6983,7 +6991,7 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .intro-title {
     font-size: 1.2em;
-    width: 27em;
+    width: 34em;
   }
 }
 
@@ -7126,14 +7134,26 @@ input[type='checkbox'] {
   .who-item:nth-child(1) {
     -ms-grid-column: 2;
     grid-column: 2;
+    -ms-grid-row: 1;
+    grid-row: 1;
   }
   .who-item:nth-child(2) {
     -ms-grid-column: 4;
     grid-column: 4;
+    -ms-grid-row: 1;
+    grid-row: 1;
   }
   .who-item:nth-child(3) {
-    -ms-grid-column: 6;
-    grid-column: 6;
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+  .who-item:nth-child(4) {
+    -ms-grid-column: 4;
+    grid-column: 4;
+    -ms-grid-row: 2;
+    grid-row: 2;
   }
 }
 
@@ -7177,8 +7197,12 @@ input[type='checkbox'] {
   .who-content {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto 11em 1em 11em 1em 11em auto;
-        grid-template-columns: auto 11em 1em 11em 1em 11em auto;
+    -ms-grid-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
+        grid-template-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
+    -ms-grid-columns: auto 14em 3em 14em 3em auto;
+        grid-template-columns: auto 14em 3em 14em 3em auto;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
   }
 }
 
@@ -7273,7 +7297,7 @@ input[type='checkbox'] {
 }
 
 .how-title {
-  margin: .8em 0 0 0;
+  margin: .8em 0 .5em 0;
 }
 
 .how-sub {
@@ -7324,11 +7348,12 @@ input[type='checkbox'] {
 .signature-package {
   margin: 4em auto;
   width: 21em;
+  text-align: center;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .signature-package {
-    margin: 3em 0;
+    margin: 2em 0;
     width: 100%;
   }
 }
@@ -7337,8 +7362,27 @@ input[type='checkbox'] {
   .signature-content {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto (19em)[2] auto;
-        grid-template-columns: auto repeat(2, 19em) auto;
+    -ms-grid-columns: auto 18em 1em 18em auto;
+        grid-template-columns: auto 18em 1em 18em auto;
+    text-align: left;
+  }
+}
+
+.coaching-package-item {
+  position: relative;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .coaching-package-item {
+    height: 18em;
+  }
+  .coaching-package-item:nth-child(1) {
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+  .coaching-package-item:nth-child(2) {
+    -ms-grid-column: 4;
+    grid-column: 4;
   }
 }
 
@@ -7495,6 +7539,8 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .signature-button {
     width: 11.5em;
+    position: absolute;
+    bottom: 0;
   }
 }
 
