--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -75,7 +75,7 @@
         right: 0;
         top: 0;
         bottom: 0;
-        height: 13em;
+        height: 17em;
         margin: auto;
     }
     @media #{$breakpoint-lg}{
@@ -212,6 +212,13 @@
     }
 }
 
+.services-logo-title{
+    @media #{$breakpoint-md}{
+        font-size: 3em;
+        line-height: .8;
+        margin: 0 ;
+    }
+}
 // ---------------------------------------------------------------
 // services intro
 // ---------------------------------------------------------------
@@ -234,7 +241,7 @@
     font-family: $font-biko;
     @media #{$breakpoint-md}{
         font-size: 1.2em;
-        width: 27em;
+        width: 34em;
         // margin-top: 0;
     }
     @media #{$breakpoint-lg}{
@@ -329,12 +336,19 @@
         margin: 0;
         &:nth-child(1){
             grid-column: 2;
+            grid-row: 1;
         }
         &:nth-child(2){
             grid-column: 4;
+            grid-row: 1;
         }
         &:nth-child(3){
-            grid-column: 6;
+            grid-column: 2;
+            grid-row: 2;
+        }
+        &:nth-child(4){
+            grid-column: 4;
+            grid-row: 2;
         }
     }
 }
@@ -366,7 +380,11 @@
 .who-content{
     @media #{$breakpoint-md}{
         display: grid;
-        grid-template-columns: auto 11em 1em 11em 1em 11em auto;
+        grid-template-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
+            // grid-template-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
+            grid-template-columns: auto 14em 3em 14em 3em auto;
+            grid-template-rows: auto auto;
+
     }   
     @media #{$breakpoint-lg}{
         display: grid;
@@ -429,7 +447,7 @@
 }
 
 .how-title{
-    margin: .8em 0 0 0;
+    margin: .8em 0 .5em 0;
 }
 
 .how-sub{
@@ -470,16 +488,32 @@
 .signature-package{
     margin: 4em auto;
     width: 21em;
+    text-align: center;
     @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl}, #{$breakpoint-xxl}{
-        margin: 3em 0;
+        margin: 2em 0;
         width: 100%;
     }
 }
 
+
 .signature-content{
     @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl}, #{$breakpoint-xxl}{
         display: grid;
-        grid-template-columns: auto repeat(2, 19em) auto;
+        grid-template-columns: auto 18em 1em 18em auto;
+        text-align: left;
+    }
+}
+
+.coaching-package-item{
+    position: relative;
+    @media #{$breakpoint-md}{
+        height: 18em;
+        &:nth-child(1){
+            grid-column: 2;
+        }
+        &:nth-child(2){
+            grid-column: 4;
+        }
     }
 }
 
@@ -598,6 +632,8 @@
     }
     @media #{$breakpoint-md}{
         width: 11.5em;
+        position: absolute;
+        bottom: 0;
     }
     @media #{$breakpoint-lg}{
         width: 11em;
