--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8284,8 +8284,22 @@ input[type='checkbox'] {
   }
 }
 
-.testimonials-section {
-  margin: 3em 0;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-intro .sect-subtitle {
+    margin: 2em 0 1em 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-intro-text {
+    margin-bottom: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonials-section {
+    margin: 2em 0;
+  }
 }
 
 .testimonial-item {
