--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6763,7 +6763,7 @@ input[type='checkbox'] {
     right: 0;
     top: 0;
     bottom: 0;
-    height: 13em;
+    height: 17em;
     margin: auto;
   }
 }
@@ -6787,7 +6787,7 @@ input[type='checkbox'] {
     right: 0;
     top: 0;
     bottom: 0;
-    height: 10em;
+    height: 13em;
     margin: auto;
   }
 }
@@ -6801,6 +6801,20 @@ input[type='checkbox'] {
     bottom: 0;
     height: 9em;
     margin: auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .services-hero-content .about-title {
+    font-size: 1.4em;
+    letter-spacing: .2em;
+    margin: 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .services-hero-content .sect-title {
+    margin: .5em 0 .9em;
   }
 }
 
@@ -6957,6 +6971,20 @@ input[type='checkbox'] {
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .services-logo-title {
+    font-size: 3em;
+    line-height: .8;
+    margin: 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .services-logo-title {
+    line-height: .6;
+  }
+}
+
 .services-intro {
   background-color: #f0f3f3;
   text-align: center;
@@ -6983,7 +7011,7 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .intro-title {
     font-size: 1.2em;
-    width: 27em;
+    width: 34em;
   }
 }
 
@@ -6996,8 +7024,8 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 1200px) {
   .intro-title {
-    font-size: 1.1em;
-    width: 27em;
+    font-size: 1em;
+    width: 34em;
   }
 }
 
@@ -7119,7 +7147,37 @@ input[type='checkbox'] {
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .who-item {
+    margin: 0;
+  }
+  .who-item:nth-child(1) {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-row: 1;
+    grid-row: 1;
+  }
+  .who-item:nth-child(2) {
+    -ms-grid-column: 4;
+    grid-column: 4;
+    -ms-grid-row: 1;
+    grid-row: 1;
+  }
+  .who-item:nth-child(3) {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+  .who-item:nth-child(4) {
+    -ms-grid-column: 4;
+    grid-column: 4;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .who-item {
     margin: 0;
   }
@@ -7134,6 +7192,10 @@ input[type='checkbox'] {
   .who-item:nth-child(3) {
     -ms-grid-column: 6;
     grid-column: 6;
+  }
+  .who-item:nth-child(4) {
+    -ms-grid-column: 8;
+    grid-column: 8;
   }
 }
 
@@ -7177,8 +7239,10 @@ input[type='checkbox'] {
   .who-content {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto 11em 1em 11em 1em 11em auto;
-        grid-template-columns: auto 11em 1em 11em 1em 11em auto;
+    -ms-grid-columns: auto 14em 3em 14em 3em auto;
+        grid-template-columns: auto 14em 3em 14em 3em auto;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
   }
 }
 
@@ -7195,8 +7259,8 @@ input[type='checkbox'] {
   .who-content {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto 10em 2em 10em 2em 10em auto;
-        grid-template-columns: auto 10em 2em 10em 2em 10em auto;
+    -ms-grid-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
+        grid-template-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
   }
 }
 
@@ -7248,7 +7312,7 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .how-item {
     margin: 0;
-    padding: .8em 1em;
+    padding: .8em .7em;
     height: 26em;
     width: 100%;
   }
@@ -7273,7 +7337,7 @@ input[type='checkbox'] {
 }
 
 .how-title {
-  margin: .8em 0 0 0;
+  margin: .8em 0 .5em 0;
 }
 
 .how-sub {
@@ -7306,6 +7370,12 @@ input[type='checkbox'] {
   }
 }
 
+@media only screen and (min-width: 1200px) {
+  .how-item-title {
+    font-size: .9em;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .how-content {
     display: -ms-grid;
@@ -7324,11 +7394,12 @@ input[type='checkbox'] {
 .signature-package {
   margin: 4em auto;
   width: 21em;
+  text-align: center;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .signature-package {
-    margin: 3em 0;
+    margin: 2em 0;
     width: 100%;
   }
 }
@@ -7337,8 +7408,52 @@ input[type='checkbox'] {
   .signature-content {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto (19em)[2] auto;
-        grid-template-columns: auto repeat(2, 19em) auto;
+    -ms-grid-columns: auto 18em 1em 18em auto;
+        grid-template-columns: auto 18em 1em 18em auto;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .signature-content {
+    -ms-grid-columns: auto 15em 1em 15em 1em 15em auto;
+        grid-template-columns: auto 15em 1em 15em 1em 15em auto;
+  }
+}
+
+.coaching-package-item {
+  position: relative;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .coaching-package-item {
+    height: 18em;
+  }
+  .coaching-package-item:nth-child(1) {
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+  .coaching-package-item:nth-child(2) {
+    -ms-grid-column: 4;
+    grid-column: 4;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .coaching-package-item {
+    height: 14em;
+  }
+  .coaching-package-item:nth-child(1) {
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+  .coaching-package-item:nth-child(2) {
+    -ms-grid-column: 4;
+    grid-column: 4;
+  }
+  .coaching-package-item:nth-child(3) {
+    -ms-grid-column: 6;
+    grid-column: 6;
   }
 }
 
@@ -7495,6 +7610,8 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .signature-button {
     width: 11.5em;
+    position: absolute;
+    bottom: 0;
   }
 }
 
@@ -7507,6 +7624,8 @@ input[type='checkbox'] {
 @media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .signature-button {
     margin: 1em auto 0 0;
+    position: absolute;
+    bottom: 0;
   }
 }
 
@@ -8238,8 +8357,22 @@ input[type='checkbox'] {
   }
 }
 
-.testimonials-section {
-  margin: 3em 0;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-intro .sect-subtitle {
+    margin: 2em 0 1em 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-intro-text {
+    margin-bottom: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonials-section {
+    margin: 2em 0;
+  }
 }
 
 .testimonial-item {
